[gd_scene load_steps=11 format=2]

[ext_resource path="res://zombie.png" type="Texture" id=1]
[ext_resource path="res://Zombie.gd" type="Script" id=2]
[ext_resource path="res://WanderTimer.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 28.0179

[sub_resource type="CircleShape2D" id=2]
radius = 29.0172

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 17, 38.5 )

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("HurtBox:monitoring")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HurtBox:monitorable")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.165012, 0.165012 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("HurtBox:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("HurtBox:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -20, 0 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "attack"
tracks/0/type = "value"
tracks/0/path = NodePath("HurtBox:monitoring")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HurtBox:monitorable")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.165012, 0.165012 ), Vector2( 0.2, 0.2 ), Vector2( 0.16, 0.16 ) ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.6, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "attack_finished"
}, {
"args": [  ],
"method": "attack_finished"
} ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("HurtBox:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 2, 2 ), Vector2( 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("HurtBox:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -20, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 17.5, 38.5 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 98.5, 75 )

[node name="Zombie" type="KinematicBody2D"]
z_as_relative = false
collision_mask = 6
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 1.19209e-07, 1.19209e-07 )
scale = Vector2( 0.165012, 0.165012 )
z_index = -1
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 577, 358, 403, 504 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="WanderTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
script = ExtResource( 3 )

[node name="LookAroundTimer" type="Timer" parent="."]

[node name="WallBounceTimer" type="Timer" parent="."]

[node name="RoomDetector" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="RoomDetector"]
shape = SubResource( 2 )

[node name="HurtBox" type="Area2D" parent="."]
visible = false
position = Vector2( -20, 0 )
collision_layer = 0
collision_mask = 20
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
modulate = Color( 1, 0, 0, 1 )
position = Vector2( 47, 0 )
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 4 )
anims/attack = SubResource( 5 )

[node name="PlayerDetector" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
position = Vector2( 47.5, -0.5 )
shape = SubResource( 6 )

[node name="WindowDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="WindowDetector"]
position = Vector2( 19.5, -1 )
shape = SubResource( 7 )

[connection signal="timeout" from="WanderTimer" to="." method="_on_WanderTimer_timeout"]
[connection signal="timeout" from="LookAroundTimer" to="." method="_on_LookAroundTimer_timeout"]
[connection signal="timeout" from="WallBounceTimer" to="." method="_on_WallBounceTimer_timeout"]
[connection signal="area_entered" from="RoomDetector" to="." method="_on_RoomDetector_area_entered"]
[connection signal="area_exited" from="RoomDetector" to="." method="_on_RoomDetector_area_exited"]
[connection signal="body_entered" from="HurtBox" to="." method="_on_HurtBox_body_entered"]
[connection signal="body_entered" from="PlayerDetector" to="." method="_on_PlayerDetector_body_entered"]
[connection signal="body_exited" from="PlayerDetector" to="." method="_on_PlayerDetector_body_exited"]
[connection signal="body_entered" from="WindowDetector" to="." method="_on_WindowDetector_body_entered"]
[connection signal="body_exited" from="WindowDetector" to="." method="_on_WindowDetector_body_exited"]
